fix button style on safari and footer alignment on mobile

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -39,6 +39,7 @@ html {
 }
 
 #root {
+  width: 100vw;
   padding: 5vh 0 2vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -56,7 +57,7 @@ html {
   min-height: 95vh;
   width: 100vw;
   max-width: 900px;
-  padding: 0vh 5vh 5vh 0vh;
+  padding: 0vh 5vh 5vh 5vh;
   justify-content: center;
   @extend %flex-column;
 }
@@ -98,7 +99,7 @@ html {
   &-pop .menubar:before {
     opacity: 1;
   }
-  &-pop .menubar__btn:after {
+  &-pop .menubar__btn__text:after {
     background: $white;
   }
 }
@@ -115,6 +116,8 @@ html {
           justify-content: space-evenly;
   &:after,
   &:before {
+    max-height: 100vh;
+    max-width: 100vw;
     position: absolute;
     content: "";
     height: 3px;
@@ -146,33 +149,37 @@ html {
             flex: 0 1 40%;
     color: $text;
     text-decoration: none;
-    -webkit-box-shadow: none;
-            box-shadow: none;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
-    &:after {
-      position: absolute;
-      display: block;
-      content: "";
-      height: 10px;
-      width: 40%;
-      opacity: 0;
-      background: $pop;
-      -webkit-transform: translateY(20px) scaleX(0);
-              transform: translateY(20px) scaleX(0);
-      -webkit-transition: all 0.2s;
-      transition: all 0.2s;
-      z-index: -1;
-    }
-    &:hover:after {
-      opacity: 1;
-      -webkit-transform: translateY(7px) scaleX(1);
-              transform: translateY(7px) scaleX(1);
-    }
-    &:focus:after {
-      opacity: 1;
-      -webkit-transform: translateY(7px) scaleX(1);
-              transform: translateY(7px) scaleX(1);
+    &__text{
+      display: inline-flex;
+      position: relative;
+      &:after {
+        position: absolute;
+        display: block;
+        content: "";
+        height: 50%;
+        width: 140%;
+        left: -20%;
+        top: 25%;
+        opacity: 0;
+        background: $pop;
+        -webkit-transform: translateY(20px) scaleX(0);
+                transform: translateY(20px) scaleX(0);
+        -webkit-transition: all 0.2s;
+        transition: all 0.2s;
+        z-index: -1;
+      }
+      &:hover:after {
+        opacity: 1;
+        -webkit-transform: translateY(7px) scaleX(1);
+                transform: translateY(7px) scaleX(1);
+      }
+      &:focus:after {
+        opacity: 1;
+        -webkit-transform: translateY(7px) scaleX(1);
+                transform: translateY(7px) scaleX(1);
+      }
     }
   }
 }
@@ -251,6 +258,7 @@ html {
             flex: 30%;
   }
   &__body {
+    padding: 0 10px;
     -webkit-box-flex: 70%;
         -ms-flex: 70%;
             flex: 70%;
@@ -276,7 +284,6 @@ html {
   }
   &__description {
     @extend %flex-column;
-    padding: 0 10px;
     margin: 0 0 5px 0;
     & p {
       margin: 10px 0;
@@ -333,14 +340,14 @@ html {
 @media only Screen and (min-width: 400px) {
   .card {
     padding: 15px 20px;
-    &__description {
+    &__body {
       padding: 0 10px;
     }
   }
 }
 
 @media only Screen and (min-width: 800px) {
-  .card__description {
+  .card__body {
     padding: 0 15px;
   }
 }
@@ -506,7 +513,7 @@ html {
   color: $text_muted;
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: calc(100% - 5vh);
   display: flex;
   justify-content: center;
   z-index: 2;
@@ -517,5 +524,17 @@ html {
     &:hover, &:focus{
       color: $pop;
     }
+  }
+}
+
+@media only Screen and (min-width: 400px) {
+  .footer{
+    width: calc(100% - 3vh);
+  }
+}
+
+@media only Screen and (min-width: 800px) {
+  .footer{
+    width: 100%;
   }
 }
